[package]
name = "cdsat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creusot-contracts = { path = "../creusot/creusot-contracts", version = "*" }
num-rational = "0.3.2"
num = "*"
priority-queue = "1.2.2"
smt2parser="0.6"
indexmap = "*"
rand = "*"
clap ={ version= "4.4", features = ["derive"]}
log = "*"
env_logger = "*"

[build-dependencies]
syn = {version = "2.0", features = ["visit"] }
walkdir="*"
quote="*"
creusot-contracts = { path = "../creusot/creusot-contracts", version = "*" }
