[package]
name = "cdsat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creusot-std = "0.9"
creusot-std-proc = "0.9"
num = "0.3.*"
priority-queue = "1.2.2"
smt2parser="0.6"
indexmap = "*"
rand = "*"
clap ={ version= "4.4", features = ["derive"]}
log = "*"
env_logger = "*"

# [build-dependencies]
# syn = {version = "2.0", features = ["visit"] }
# walkdir="*"
# quote="*"
# creusot-contracts = { path = "../creusot/creusot-contracts", version = "*" }
