[package]
name = "cdsat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creusot-std = { version = "0.9", path = "../creusot/creusot-std" }
creusot-std-proc =  { version = "0.9", path = "../creusot/creusot-std-proc" }
num = { version = "0.4" }
num-rational = "*"
priority-queue = "1.2.2"
smt2parser= { version = "0.6", git = "https://github.com/xldenis/smt2utils" }
indexmap = "*"
rand = "*"
clap ={ version= "4.4", features = ["derive"]}
log = "*"
env_logger = "*"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
# [build-dependencies]
# syn = {version = "2.0", features = ["visit"] }
# walkdir="*"
# quote="*"
# creusot-contracts = { path = "../creusot/creusot-contracts", version = "*" }
